# estuary

./: .gitignore  .gitmodules  BUILDING.md  BULDING.md  Estuary.cabal  EstuaryClient.hs  EstuaryServer.hs  Issues.txt  Main.hs  Makefile  README.md  Reflex-Dom-Concepts.lhs  Reflex-Dom-Concepts10.lhs  Reflex-Dom-Concepts11.lhs  Reflex-Dom-Concepts12.lhs  Reflex-Dom-Concepts13.lhs  Reflex-Dom-Concepts14.lhs  Reflex-Dom-Concepts15.lhs  Reflex-Dom-Concepts3.lhs  Reflex-Dom-Concepts5.lhs  Reflex-Dom-Concepts6.lhs  Reflex-Dom-Concepts7.lhs  Reflex-Dom-Concepts8.lhs  Reflex-Dom-Concepts9.lhs  Saborts.hs  THEMES.md  Test.hs  To do  Usage.txt  cabal-ghcjs.project  cabal.project  client.yaml  cssClasses.css  curlReleaseClient.sh  default.nix  dragndropv2.hs  estuary.js  evalClient.js  generateAudioResources.sh  hydra-synth.nix  (+14 more)
EstuaryServer/: EstuaryServer.cabal  EstuaryServer.hs
client/: Setup.hs  estuary.cabal  package.yaml  stack.yaml
client/app/: Main.hs
client/src/Estuary/: Makefile  RenderInfo.hs  RenderState.hs  Renderer.hs  Resources.hs  ViewPresets.hs
client/src/Estuary/Client/: Extension.hs  Settings.hs
client/src/Estuary/Help/: Alobestia.hs  CQenze.hs  CanvasOp.hs  CineCer0.hs  ColombiaEsPasion.hs  Crudo.hs  Hydra.hs  Imagina.hs  LaCalle.hs  LanguageHelp.hs  Maria.hs  Medellin.hs  MiniTidal.hs  Morelia.hs  Natural.hs  NoHelpFile.hs  PunctualAudio.hs  PunctualVideo.hs  Puntoyya.hs  Saborts.hs  Saludos.hs  Sentidos.hs  Si.hs  Sucixxx.hs  SuperContinent.hs  SvgOp.hs  TerminalViewCommands.hs  Togo.hs  Vocesotrevez.hs
client/src/Estuary/Help/CineCer0/: CineCer0.hs  CineCer0Reference.hs
client/src/Estuary/Languages/: Alobestia.hs  BlackBox.hs  CQenze.hs  CanvasOp.hs  CineCer0.hs  ColombiaEsPasion.hs  Crudo.hs  ExoLang.hs  ExpParser.hs  Hydra.hs  Imagina.hs  JSoLang.hs  JsoLang.hs  LaCalle.hs  LocoMotion.hs  Maria.hs  Medellin.hs  MiniTidal.hs  MiniTidal.md  Morelia.hs  Natural.hs  Punctual.hs  Puntoyya.hs  Saborts.hs  Saludos.hs  Seis8s.hs  Sentidos.hs  Si.hs  Sucixxx.hs  SuperContinent.hs  SvgOp.hs  TextReplacement.hs  TidalParsers.hs  TimeNot.hs  Togo.hs  Vocesotrevez.hs
client/src/Estuary/Languages/CineCer0/: CineCer0State.hs  DynamicOpacity.hs  GeometryAndStyle.hs  Parser.hs  PositionAndRate.hs  README.md  REFERENCE.md  Signal.hs  Signals.hs  Spec.hs  Types.hs  VideoSpec.hs
client/src/Estuary/Languages/Hydra/: Parser.hs  REFERENCE.md  Render.hs  Test.hs  (+1 more)
client/src/Estuary/Protocol/: Foreign.hs  Peer.hs
client/src/Estuary/Reflex/: Container.hs  POC.hs  Router.hs  Utility.hs
client/src/Estuary/Render/: AudioContext.hs  CineCer0.hs  DynamicsMode.hs  ForeignTempo.hs  Hydra.hs  ImmutableResources.hs  LocalResources.hs  MainBus.hs  Punctual.hs  R.hs  RenderEngine.hs  RenderEnvironment.hs  RenderOp.hs  Renderer.hs  ResourceList.hs  ResourceProvider.hs  Resources.hs  Seis8s.hs  SuperDirt.hs  TextNotationRenderer.hs  Tidal.hs  TimeNot.hs  WebDirt.hs  WebSerial.hs  XMLHttpRequest.hs  ZoneOp.hs
client/src/Estuary/Resources/: AudioResource.hs  Loadable.hs  LocMap.hs  ResourceList.hs  XMLHttpRequest.hs
client/src/Estuary/Tidal/: ParamPatternable.hs
client/src/Estuary/Tutorials/: CineCer0.hs  Context.hs  IntroTidalText.hs  Metre.hs  Punctual.hs  TidalCyclesBasics.hs  Timer.hs  Tutorial.hs
client/src/Estuary/Types/: AnimationState.hs  AsyncValue.hs  AudioResource.hs  CanvasOp.hs  CanvasState.hs  Color.hs  Context.hs  Effect.hs  EnsembleC.hs  EnsembleState.hs  Hint.hs  JSException.hs  LaCalleReference.hs  Language.hs  LanguageHelp.hs  Loadable.hs  LocMap.hs  LocalResources.hs  MiniTidalReference.hs  NetworkStatus.hs  NoteEvent.hs  ParamPatternable.hs  RenderInfo.hs  RenderState.hs  ResourceMap.hs  Samples.hs  ServerInfo.hs  Settings.hs  Stroke.hs  SvgOp.hs  Tempo.hs  Term.hs  Terminal.hs  Transform.hs  Tutorial.hs  UriOptions.hs  Variable.hs  ViewsParser.hs
client/src/Estuary/WebDirt/: Foreign.hs  SampleEngine.hs  SuperDirt.hs  WebDirt.hs
client/src/Estuary/Widgets/: AboutEstuary.hs  Announcements.hs  AudioMap.hs  CalendarEvent.hs  CanvasDisplay.hs  Chat.hs  Config.hs  CounterWidget.hs  CreateEnsemble.hs  DataVisualisers.hs  DynSvg.hs  Editor.hs  Ensemble.hs  EnsembleStatus.hs  Estuary.hs  EstuaryIcon.hs  EstuaryWidget.hs  ExoWidget.hs  Footer.hs  GeneralPattern.hs  Generic.hs  Header.hs  JSoWidget.hs  LevelMeters.hs  MultilingualEditor.hs  Navigation.hs  Notepad.hs  PatternChain.hs  Plot.hs  Reference.hs  Reflex.hs  ResourceUpload.hs  ResourceWidget.hs  Roulette.hs  RouletteWidget.hs  Router.hs  Scheduler.hs  Sequencer.hs  SideBar.hs  Sidebar.hs  (+18 more)
client/src/Estuary/test/: Harness.hs
client/test/: Interaction.hs  MiniTidalTests.hs  Simple.hs
client/test/Estuary/Test/: Dom.hs  Estuary.hs  Protocol.hs  Reflex.hs  protocol-inspector.js
client/test/harness/: index.js  package.json
client/tests/: ClientTests.hs
common/: estuary-common.cabal  package.yaml
common/src/Estuary/: Utility.hs
common/src/Estuary/Tidal/: Types.hs
common/src/Estuary/Types/: AspectRatio.hs  AudioMeta.hs  CanvasOp.hs  Chat.hs  CodeWidgetOptions.hs  Color.hs  Definition.hs  EditOrEval.hs  Ensemble.hs  EnsembleEvent.hs  EnsembleOp.hs  EnsembleRequest.hs  EnsembleResponse.hs  ImageMeta.hs  Language.hs  Live.hs  Location.hs  LogEntry.hs  MovingAverage.hs  Name.hs  Participant.hs  Request.hs  ResourceMeta.hs  ResourceOp.hs  ResourceType.hs  Resources.hs  Response.hs  Scope.hs  Sited.hs  Stroke.hs  SvgOp.hs  Tempo.hs  TextNotation.hs  TidalParser.hs  Transform.hs  TranslatableText.hs  VideoMeta.hs  View.hs  WidgetOptions.hs  ZonedTime.hs
estuary-stack/: README.txt  estuary-stack.cabal
estuary-stack/src/: Main.hs
server/: EstuaryServer.hs  Main.hs  Request.hs  TidalHint.hs  WebDirt.hs  estuary-server.cabal  estuaryHttp.js  estuaryWebSocket.hs  package.json  package.yaml  renderTidal.hs  simpleWebSocketClient.html  stack.yaml
server/app/: Main.hs
server/src/: EstuaryServer.hs
server/src/Estuary/: AtomicallyTimed.hs  Resources.hs
server/src/Estuary/Types/: Client.hs  Database.hs  EnsembleS.hs  Server.hs  ServerState.hs  Transaction.hs
server/staticWebContent/: default.html
(+252 files in other folders)
