name:                Estuary
version:             0.0.0.1
synopsis:            Projectional editor for Tidal
description:         Please see README.md
homepage:            http://github.com/d0kt0r0/estuary/blob/master/README.md
license:             GPL-3
license-file:        LICENSE
author:              Matt Paine, Jacques Carette, David Ogborn
maintainer:          matthewpaine21@gmail.com
copyright:           2015 Matt Paine, Jacques Carette, David Ogborn
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable Estuary
  hs-source-dirs:      Estuary
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base, reflex, reflex-dom, tidal, hosc, containers, safe, ghcjs-base
