name:                Estuary
version:             0.0.0.1
synopsis:            Projectional editor for TidalCycles
description:         Please see README.md
homepage:            http://github.com/d0kt0r0/estuary/blob/master/README.md
license:             GPL-3
license-file:        LICENSE
author:              David Ogborn, Jamie Beverley and others
maintainer:          ogbornd@mcmaster.ca
copyright:           2015-17 David Ogborn and others
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:

executable Estuary
  hs-source-dirs:    .
  main-is:           EstuaryClient.hs
  build-depends:     base, reflex, reflex-dom, tidal, hosc, containers, safe, ghcjs-base, ghcjs-dom, text, array, ghcjs-prim, data-default, transformers, file-embed, time, monad-loops, json, bytestring, parsec, parsec-numbers, reflex-dom-contrib, mtl
  default-language:  Haskell2010
