name:                EstuaryServer
version:             0.0.0.1
synopsis:            Projectional editor for TidalCycles
description:         Please see README.md
homepage:            http://github.com/d0kt0r0/estuary/blob/master/README.md
license:             GPL-3
author:              David Ogborn, Jamie Beverley and others
maintainer:          ogbornd@mcmaster.ca
copyright:           2015-17 David Ogborn and others
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  

executable EstuaryServer
  hs-source-dirs:    .. .
  main-is:           EstuaryServer.hs
  build-depends:     base, containers, text, tidal, hosc, json, websockets
  default-language:  Haskell2010

