name:                estuary-stack
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/estuary-stack#readme
license:             BSD3
license-file:        LICENSE
author:              Matt Paine, Jacques Carette, David Ogborn
maintainer:          matthewpaine21@gmail.com
copyright:           2015 Matt Paine
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable estuary-stack
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
