cabal-version: 1.12

name:           estuary-server
version:        0.0.0.1
synopsis:       Platform for collaboration and learning through live coding
description:    Please see README.md
category:       Web
homepage:       http://github.com/dktr0/estuary/blob/stable/README.md
author:         David Ogborn and contributors
maintainer:     ogbornd@mcmaster.ca
copyright:      2015-21 David Ogborn and contributors
license:        GPL-3
build-type:     Simple

library
  exposed-modules:
      Estuary.AtomicallyTimed
      Estuary.Resources
      Estuary.Types.Client
      Estuary.Types.Database
      Estuary.Types.EnsembleS
      Estuary.Types.ServerState
      Estuary.Types.Transaction
      EstuaryServer
  other-modules:
      Paths_estuary_server
  hs-source-dirs:
      ./src
  build-depends:
      aeson
    , async
    , base
    , bytestring
    , containers
    , directory
    , estuary-common
    , filepath
    , htaglib
    , http-types
    , json
    , mtl
    , network
    , sqlite-simple
    , stm
    , template-haskell
    , text
    , text-show
    , time
    , tls
    , wai
    , wai-app-static
    , wai-extra
    , wai-websockets
    , warp
    , warp-tls
    , websockets
  default-language: Haskell2010

executable EstuaryServer
  main-is: Main.hs
  other-modules:
      Paths_estuary_server
  hs-source-dirs:
      ./app
  ghc-options: -threaded
  build-depends:
      aeson
    , async
    , base
    , bytestring
    , containers
    , directory
    , estuary-common
    , estuary-server
    , filepath
    , htaglib
    , http-types
    , json
    , mtl
    , network
    , sqlite-simple
    , stm
    , template-haskell
    , text
    , text-show
    , time
    , tls
    , wai
    , wai-app-static
    , wai-extra
    , wai-websockets
    , warp
    , warp-tls
    , websockets
  default-language: Haskell2010
